fix: reintroducir el gap entre los elementos de las tarjetas de los productos del catálogo

--- a/recursos/css/catalogo.css
+++ b/recursos/css/catalogo.css
@@ -93,7 +93,7 @@
     display: flex;
     flex-direction: column;
     padding: 5%;
-    /* Agregado para que ocupe el alto disponible */
+    gap: 1rem;
     flex-grow: 1;
     justify-content: space-between;
 }
